feat: recover queued publications within Builder
